# literature

./: .coverage  .env.example  .gitignore  AGENTS.md  DOCUMENTATION_ASSESSMENT_REPORT.md  DOCUMENTATION_REVIEW_REPORT.md  README.md  pyproject.toml  run_literature.sh  to-do.md
.cursorrules/: README.md  architecture.md  code-quality.md  documentation.md  general.md  project-specific.md  testing.md
data/: AGENTS.md  README.md  failed_downloads.json  github_repositories.md  library.json  references.bib  summarization_progress.1765574260.json  summarization_progress.json
data/extracted_text/: 00012022program.txt  00122024navigating.txt  accardi2023osteopathparentchild.txt  adams2012predictions.txt  adams2012smooth.txt  adams2024computational.txt  aguilera2021how.txt  albarracin2021variational.txt  albarracin2022nature.txt  albarracin2023mapping.txt  albarracin2025resilience.txt  alekseeva2025it2.txt  allen2016from.txt  allen2019bodys.txt  allen2022bodys.txt  amorese2025online.txt  andani2025premovement.txt  andersen2023exploring.txt  annabi2020autonomous.txt  anonymous1962more.txt  anonymous1996introduction.txt  anonymous2022active.txt  anonymous2022discounting.txt  anonymous2022overview.txt  anonymous2023recent.txt  anonymous2024erratum.txt  anonymous2024redefining.txt  anonymous2024reviewer.txt  anonymous2025deep.txt  anonymous2025inner.txt  anonymousnodateappendix.txt  anonymousnodateenergy.txt  anonymousnodatefree.txt  anonymousnodatefree3.txt  anonymousnodategibbs.txt  anonymousnodatetable2.txt  antonioni2024new.txt  arshid2025toward.txt  arthur2021examination.txt  arthur2023testing.txt  (+763 more)
data/output/: meta_analysis_summary.json  meta_analysis_summary.md  pca_loadings.csv  pca_loadings.json  pca_loadings_summary.md  word_importance_rankings.csv
data/plots/: language_statistics.txt  language_trends.html  language_usage_by_year.csv  language_usage_long.csv  languages_over_time.csv  specific_tools.html  specific_tools_analysis.txt  specific_tools_by_paper.csv  specific_tools_frequency.csv  tool_combinations.csv  tool_cooccurrence.html  tool_cooccurrence_analysis.txt  tool_cooccurrence_matrix.csv  tools_and_languages_over_time.html  tools_and_languages_summary.md  tools_over_time.csv
data/summaries/: aguilera2021how_claims_quotes.md  aguilera2021how_methods_tools.md  aguilera2021how_summary.md  alanova2025lightweight_claims_quotes.md  alanova2025lightweight_methods_tools.md  alanova2025lightweight_summary.md  albarracin2022mapping_claims_quotes.md  albarracin2022mapping_methods_tools.md  (+878 more)
docs/: DOCUMENTATION_COMPLETION_SUMMARY.md  README.md  TRIPLE_CHECK_REPORT.md  architecture.md  getting-started.md
infrastructure/: AGENTS.md  README.md  __init__.py
scripts/: 07_literature_search.py  AGENTS.md  README.md  analyze_specific_tools.py  analyze_tool_cooccurrence.py  analyze_tools_and_languages_over_time.py  bash_utils.sh  extract_github_repos.py  plot_language_trends.py  re_extract_incomplete.py
tests/: AGENTS.md  README.md  conftest.py  utils.py
(+1447 files in other folders)
