# Literature Search and Management System Configuration
# 
# Standalone repository for academic literature search, PDF management,
# and reference tracking with AI-powered summarization.

[project]
name = "literature-search"
version = "1.0.0"
description = "Academic literature search and management system with multi-source search, PDF downloading, and AI-powered summarization"
authors = [{ name = "Literature Search Team" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["literature", "academic", "research", "papers", "bibliography", "pdf", "summarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "numpy>=1.22",
    "requests>=2.31.0",
    "pypdf>=5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
pdf = [
    "pdfplumber>=0.11.0",  # Optional: Best quality PDF text extraction
]

[tool.uv]

[tool.pytest.ini_options]
pythonpath = [".", "infrastructure"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings --durations=10 --timeout=10"
markers = [
    "requires_ollama: mark test as requiring running Ollama server (skip with -m 'not requires_ollama')",
    "requires_network: mark test as requiring network access",
    "slow: mark test as slow running",
    "integration: mark test as integration test",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::PendingDeprecationWarning:pytest_asyncio",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["infrastructure"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/tmp/*",
    "*/temp/*",
    "*/site-packages/*",
    "/private/var/folders/*",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pydocstyle>=6.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-timeout>=2.1.0",
]

